--- a/p8105_hw3_xl3214.Rmd
+++ b/p8105_hw3_xl3214.Rmd
@@ -13,34 +13,68 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r load dataset & necessary R packages, message=FALSE}
 library(dplyr)
-library(ggridges)
+library(ggplot2)
 library(p8105.datasets)
 data("instacart")
 ```
 
 The **instacart** dataset has `r nrow(instacart)` observations and `r ncol(instacart)` variables, including: 
+
 * `order_id`: order identifier
+
 * `product_id`: product identifier
+
 * `add_to_cart_order`: order in which each product was added to cart
+
 * `reordered`: 1 if this prodcut has been ordered by this user in the past, 0 otherwise
+
 * `user_id`: customer identifier
+
 * `eval_set`: which evaluation set this order belongs in (Note that the data for use in this class is exclusively from the “train” eval_set)
+
 * `order_number`: the order sequence number for this user (1=first, n=nth)
+
 * `order_dow`: the day of the week on which the order was placed
+
 * `order_hour_of_day`: the hour of the day on which the order was placed
+
 * `days_since_prior_order`: days since the last order, capped at 30, NA if order_number=1
+
 * `product_name`: name of the product
+
 * `aisle_id`: aisle identifier
+
 * `department_id`: department identifier
+
 * `aisle`: the name of the aisle
+
 * `department`: the name of the department
 
-```{r Some basic explorations}
+```{r Explore key variables, message=FALSE}
+#Summary of unique users
+instacart |> 
+  group_by(user_id) |> 
+  summarize(n_obs = n())
+
+#Summary of unique orders
+instacart |> 
+  group_by(order_id) |> 
+  summarize(n_obs = n())
+
+#Summary of reordered (or not) by the day of the week on which the order was placed
+instacart |>
+  group_by(order_dow, reordered) |>
+  summarize(count = n())
+```
+
+
+```{r Some basic visualizations, echo = FALSE}
 #number of unique orders and distribution of total items purchased per order, colored by unique users
 instacart |> 
   group_by(order_id) |> 
   summarize(n_obs = n()) |> 
-  ggplot(aes(x = n_obs)) + geom_histogram(color = "blue", fill = "lightblue") + 
+  ggplot(aes(x = n_obs)) + 
+  geom_histogram(color = "blue", fill = "lightblue") + 
   labs(
     title = "Orders Histogram",
     x = "Unique Order ID",
@@ -48,44 +82,50 @@ instacart |>
   )
 
 #departments, in barplot
-barplot(table(pull(instacart, department)),
-        main ="Department Barplot",
-        xlab ='Department',
-        ylab ='Frequency')
+instacart |> ggplot(aes(x = department)) +
+  geom_bar(color = "blue", fill = "lightblue") +
+  labs(title ="Department Barplot",
+       x ='Department',
+       y ='Frequency'
+      ) + 
+  theme(axis.text.x=element_text(size=4))
 
 #aisles, in barplot
-barplot(table(pull(instacart, aisle_id)),
-        main ="Aisle Barplot",
-        xlab ='Department',
-        ylab ='Frequency')
+instacart |> ggplot(aes(x = aisle_id)) +
+  geom_bar(color = "blue", fill = "lightblue") +
+  labs(title = "Aisle Barplot",
+       x ='Aisle',
+       y ='Frequency'
+      )
 
-#aisles, colored by departments
+#aisles barplot, colored by departments
 instacart |> 
-  ggplot(aes(x = aisle_id, color = department)) + geom_histogram() + 
-  labs(
-    title = "Aisles Histogram",
-    x = "Unique Aisle ID",
-    y = "Number of Items (Count)"
-  )
+  ggplot(aes(x = aisle_id, color = department, fill = department)) + 
+  geom_bar(position = "dodge") + 
+  labs(title = "Aisles Histogram",
+       x = "Unique Aisle ID",
+       y = "Number of Items (Count)"
+      ) + 
+  theme(legend.position = "top")
 ```
 
 
 The goal is to do some exploration of this dataset. To that end, write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations. Then, do or answer the following (commenting on the results of each):
 ```{r}
-instacart |> 
-  ggplot(aes(x = product_id, color = aisle_id)) + geom_histogram() + 
-  labs(
-    title = "Product Histogram",
-    x = "Product Unique ID",
-    y = "Number of Items (Count)"
-  )
+#instacart |> 
+# ggplot(aes(x = product_id, color = aisle_id)) + geom_histogram() + 
+# labs(
+#   title = "Product Histogram",
+#   x = "Product Unique ID",
+#   y = "Number of Items (Count)"
+# )
  
-  group_by(order_id) |>
-  summarize(n_obs = n()) |> 
-  ggplot(aes(x = add_to_cart_order)) + 
-  geom_histogram() |>
-  ggplot(aes(x = add_to_cart_order, y = tmax)) + 
-  geom_point()
+# group_by(order_id) |>
+# summarize(n_obs = n()) |> 
+# ggplot(aes(x = add_to_cart_order)) + 
+# geom_histogram() |>
+# ggplot(aes(x = add_to_cart_order, y = tmax)) + 
+# geom_point()
 ```
 
 * How many aisles are there, and which aisles are the most items ordered from?
