--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -15,119 +15,63 @@ data("instacart")
 The **instacart** dataset has 1384617 observations and 15 variables,
 including:
 
-- `order_id`: order identifier
+- `order_id`: order identifier, class integer.
 
-- `product_id`: product identifier
+- `product_id`: product identifier, class integer.
 
-- `add_to_cart_order`: order in which each product was added to cart
+- `add_to_cart_order`: order in which each product was added to cart,
+  class integer.
 
 - `reordered`: 1 if this prodcut has been ordered by this user in the
-  past, 0 otherwise
+  past, 0 otherwise, class integer.
 
-- `user_id`: customer identifier
+- `user_id`: customer identifier, class integer.
 
 - `eval_set`: which evaluation set this order belongs in (Note that the
-  data for use in this class is exclusively from the “train” eval_set)
+  data for use in this class is exclusively from the “train” eval_set),
+  class character.
 
 - `order_number`: the order sequence number for this user (1=first,
-  n=nth)
+  n=nth), class integer.
 
-- `order_dow`: the day of the week on which the order was placed
+- `order_dow`: the day of the week on which the order was placed, class
+  integer.
 
-- `order_hour_of_day`: the hour of the day on which the order was placed
+- `order_hour_of_day`: the hour of the day on which the order was
+  placed, class integer.
 
 - `days_since_prior_order`: days since the last order, capped at 30, NA
-  if order_number=1
+  if order_number=1, class integer.
 
-- `product_name`: name of the product
+- `product_name`: name of the product, class character.
 
-- `aisle_id`: aisle identifier
+- `aisle_id`: aisle identifier, class integer.
 
-- `department_id`: department identifier
+- `department_id`: department identifier, class integer.
 
-- `aisle`: the name of the aisle
+- `aisle`: the name of the aisle, class character.
 
-- `department`: the name of the department
+- `department`: the name of the department, class character.
 
-``` r
-#Summary of unique users
-instacart |> 
-  group_by(user_id) |> 
-  summarize(n_obs = n())
-```
+<!-- -->
 
-    ## # A tibble: 131,209 × 2
-    ##    user_id n_obs
-    ##      <int> <int>
-    ##  1       1    11
-    ##  2       2    31
-    ##  3       5     9
-    ##  4       7     9
-    ##  5       8    18
-    ##  6       9    22
-    ##  7      10     4
-    ##  8      13     5
-    ##  9      14    11
-    ## 10      17     6
-    ## # ℹ 131,199 more rows
+    ## # A tibble: 7 × 2
+    ##   order_dow  n_obs
+    ##       <int>  <int>
+    ## 1         0 324026
+    ## 2         1 205978
+    ## 3         2 160562
+    ## 4         3 154381
+    ## 5         4 155481
+    ## 6         5 176910
+    ## 7         6 207279
 
-``` r
-#Summary of unique orders
-instacart |> 
-  group_by(order_id) |> 
-  summarize(n_obs = n())
-```
-
-    ## # A tibble: 131,209 × 2
-    ##    order_id n_obs
-    ##       <int> <int>
-    ##  1        1     8
-    ##  2       36     8
-    ##  3       38     9
-    ##  4       96     7
-    ##  5       98    49
-    ##  6      112    11
-    ##  7      170    17
-    ##  8      218     5
-    ##  9      226    13
-    ## 10      349    11
-    ## # ℹ 131,199 more rows
-
-``` r
-#Summary of reordered (or not) by the day of the week on which the order was placed
-instacart |>
-  group_by(order_dow, reordered) |>
-  summarize(count = n())
-```
-
-    ## # A tibble: 14 × 3
-    ## # Groups:   order_dow [7]
-    ##    order_dow reordered  count
-    ##        <int>     <int>  <int>
-    ##  1         0         0 126492
-    ##  2         0         1 197534
-    ##  3         1         0  82602
-    ##  4         1         1 123376
-    ##  5         2         0  66093
-    ##  6         2         1  94469
-    ##  7         3         0  63802
-    ##  8         3         1  90579
-    ##  9         4         0  63027
-    ## 10         4         1  92454
-    ## 11         5         0  69671
-    ## 12         5         1 107239
-    ## 13         6         0  84106
-    ## 14         6         1 123173
-
-    ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
+There are 131209 unique users and 131209 unique orders. On average,
+there are 1.9780243^{5} items sold per day. There are 134 aisles and 21
+departments. Below are some graphs to help visualize the dataset key
+variables.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-2.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-3.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-4.png)<!-- -->
-
-The goal is to do some exploration of this dataset. To that end, write a
-short description of the dataset, noting the size and structure of the
-data, describing some key variables, and giving illstrative examples of
-observations. Then, do or answer the following (commenting on the
-results of each):
 
 ``` r
 #instacart |> 
@@ -148,13 +92,37 @@ results of each):
 
 - How many aisles are there, and which aisles are the most items ordered
   from?
+
+  - Answer: There are 134 aisles, and most items are ordered from aisle
+    *fresh vegetables*.
+
 - Make a plot that shows the number of items ordered in each aisle,
   limiting this to aisles with more than 10000 items ordered. Arrange
   aisles sensibly, and organize your plot so others can read it.
+
+![](p8105_hw3_xl3214_files/figure-gfm/Making%20the%20plot-1.png)<!-- -->
+
 - Make a table showing the three most popular items in each of the
   aisles “baking ingredients”, “dog food care”, and “packaged vegetables
   fruits”. Include the number of times each item is ordered in your
   table.
+
+<!-- -->
+
+    ## # A tibble: 9 × 3
+    ## # Groups:   aisle [3]
+    ##   aisle                      product_name                                  n_obs
+    ##   <chr>                      <chr>                                         <int>
+    ## 1 baking ingredients         Light Brown Sugar                               157
+    ## 2 baking ingredients         Organic Vanilla Extract                         122
+    ## 3 baking ingredients         Pure Baking Soda                                140
+    ## 4 dog food care              Organix Chicken & Brown Rice Recipe              13
+    ## 5 dog food care              Organix Grain Free Chicken & Vegetable Dog F…    14
+    ## 6 dog food care              Original Dry Dog                                  9
+    ## 7 packaged vegetables fruits Organic Baby Spinach                           3324
+    ## 8 packaged vegetables fruits Organic Blueberries                            1692
+    ## 9 packaged vegetables fruits Organic Raspberries                            1920
+
 - Make a table showing the mean hour of the day at which Pink Lady
   Apples and Coffee Ice Cream are ordered on each day of the week;
   format this table for human readers (i.e. produce a 2 x 7 table).
