--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -8,6 +8,7 @@ Xuan Lu
 ``` r
 library(dplyr)
 library(ggplot2)
+library(tidyverse)
 library(p8105.datasets)
 data("instacart")
 ```
@@ -73,23 +74,6 @@ variables.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-2.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-3.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-4.png)<!-- -->
 
-``` r
-#instacart |> 
-# ggplot(aes(x = product_id, color = aisle_id)) + geom_histogram() + 
-# labs(
-#   title = "Product Histogram",
-#   x = "Product Unique ID",
-#   y = "Number of Items (Count)"
-# )
- 
-# group_by(order_id) |>
-# summarize(n_obs = n()) |> 
-# ggplot(aes(x = add_to_cart_order)) + 
-# geom_histogram() |>
-# ggplot(aes(x = add_to_cart_order, y = tmax)) + 
-# geom_point()
-```
-
 - How many aisles are there, and which aisles are the most items ordered
   from?
 
@@ -113,16 +97,23 @@ variables.
     ## # Groups:   aisle [3]
     ##   aisle                      product_name                                  n_obs
     ##   <chr>                      <chr>                                         <int>
-    ## 1 baking ingredients         Light Brown Sugar                               157
-    ## 2 baking ingredients         Organic Vanilla Extract                         122
-    ## 3 baking ingredients         Pure Baking Soda                                140
-    ## 4 dog food care              Organix Chicken & Brown Rice Recipe              13
-    ## 5 dog food care              Organix Grain Free Chicken & Vegetable Dog F…    14
-    ## 6 dog food care              Original Dry Dog                                  9
-    ## 7 packaged vegetables fruits Organic Baby Spinach                           3324
-    ## 8 packaged vegetables fruits Organic Blueberries                            1692
-    ## 9 packaged vegetables fruits Organic Raspberries                            1920
+    ## 1 packaged vegetables fruits Organic Baby Spinach                           9784
+    ## 2 packaged vegetables fruits Organic Raspberries                            5546
+    ## 3 packaged vegetables fruits Organic Blueberries                            4966
+    ## 4 baking ingredients         Light Brown Sugar                               499
+    ## 5 baking ingredients         Pure Baking Soda                                387
+    ## 6 baking ingredients         Cane Sugar                                      336
+    ## 7 dog food care              Snack Sticks Chicken & Rice Recipe Dog Treats    30
+    ## 8 dog food care              Organix Chicken & Brown Rice Recipe              28
+    ## 9 dog food care              Small Dog Biscuits                               26
 
 - Make a table showing the mean hour of the day at which Pink Lady
   Apples and Coffee Ice Cream are ordered on each day of the week;
   format this table for human readers (i.e. produce a 2 x 7 table).
+
+<!-- -->
+
+    ## # A tibble: 1 × 7
+    ##     Sun   Mon   Tue   Wed Thurs   Fri   Sat
+    ##   <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
+    ## 1  13.6  12.2  12.8  14.7  13.2  12.6  13.2
