--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -67,29 +67,35 @@ including:
     ## 6         5 176910
     ## 7         6 207279
 
-There are 131209 unique users and 131209 unique orders. On average,
-there are 1.9780243^{5} items sold per day. There are 134 aisles and 21
-departments. Below are some graphs to help visualize the dataset key
-variables.
+- There are 131209 unique users and 131209 unique orders. On average,
+  there are 1.9780243^{5} items sold per day. There are 134 aisles and
+  21 departments. Below are some graphs to help visualize the dataset
+  key variables.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-1.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-2.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-3.png)<!-- -->![](p8105_hw3_xl3214_files/figure-gfm/Some%20basic%20visualizations-4.png)<!-- -->
 
-- How many aisles are there, and which aisles are the most items ordered
-  from?
+1.  How many aisles are there, and which aisles are the most items
+    ordered from?
 
-  - Answer: There are 134 aisles, and most items are ordered from aisle
-    *fresh vegetables*.
+- Answer: There are 134 aisles, and most items are ordered from aisle
+  *fresh vegetables*.
 
-- Make a plot that shows the number of items ordered in each aisle,
-  limiting this to aisles with more than 10000 items ordered. Arrange
-  aisles sensibly, and organize your plot so others can read it.
+2.  Make a plot that shows the number of items ordered in each aisle,
+    limiting this to aisles with more than 10000 items ordered. Arrange
+    aisles sensibly, and organize your plot so others can read it.
 
 ![](p8105_hw3_xl3214_files/figure-gfm/Making%20the%20plot-1.png)<!-- -->
 
-- Make a table showing the three most popular items in each of the
-  aisles “baking ingredients”, “dog food care”, and “packaged vegetables
-  fruits”. Include the number of times each item is ordered in your
-  table.
+- There are 39 aisles with more than 10,000 items ordered.
+
+- Most aisles have less than 40,000 items ordered. There are 5 aisles
+  that have more than 40,000 items sold. They are: fresh fruits, fresh
+  vegetables, packaged cheese, packaged vegetables fruits, yogurt.
+
+3.  Make a table showing the three most popular items in each of the
+    aisles “baking ingredients”, “dog food care”, and “packaged
+    vegetables fruits”. Include the number of times each item is ordered
+    in your table.
 
 <!-- -->
 
@@ -107,9 +113,25 @@ variables.
     ## 8 dog food care              Organix Chicken & Brown Rice Recipe              28
     ## 9 dog food care              Small Dog Biscuits                               26
 
-- Make a table showing the mean hour of the day at which Pink Lady
-  Apples and Coffee Ice Cream are ordered on each day of the week;
-  format this table for human readers (i.e. produce a 2 x 7 table).
+- For aisle *packaged vegetables fruits*, products Organic Baby Spinach,
+  Organic Raspberries, Organic Blueberries are the three most popular
+  products, each correspond to 9784, 5546, 4966 in sales.
+
+- For aisle *baking ingredients*, products Light Brown Sugar, Pure
+  Baking Soda, Cane Sugar are the three most popular products, each
+  correspond to 499, 387, 336 in sales.
+
+- For aisle *dog food care*, products Snack Sticks Chicken & Rice Recipe
+  Dog Treats, Organix Chicken & Brown Rice Recipe, Small Dog Biscuits
+  are the three most popular products, each correspond to 30, 28, 26 in
+  sales.
+
+- Among the three aisles, Organic Baby Spinach has the most sales of
+  9784.
+
+4.  Make a table showing the mean hour of the day at which Pink Lady
+    Apples and Coffee Ice Cream are ordered on each day of the week;
+    format this table for human readers (i.e. produce a 2 x 7 table).
 
 <!-- -->
 
@@ -117,3 +139,12 @@ variables.
     ##     Sun   Mon   Tue   Wed Thurs   Fri   Sat
     ##   <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
     ## 1  13.6  12.2  12.8  14.7  13.2  12.6  13.2
+
+- Wed has the latest mean hour of day at which Pink Lady Apples and
+  Coffee Ice Cream are ordered.
+
+## Question 2
+
+``` r
+data("brfss_smart2010")
+```
