--- a/p8105_hw3_xl3214.md
+++ b/p8105_hw3_xl3214.md
@@ -11,6 +11,8 @@ library(ggplot2)
 library(tidyverse)
 library(p8105.datasets)
 data("instacart")
+head(instacart)
+summary(instacart)
 ```
 
 The **instacart** dataset has 1384617 observations and 15 variables,
@@ -148,3 +150,37 @@ including:
 ``` r
 data("brfss_smart2010")
 ```
+
+``` r
+#format the data to use appropriate variable names
+#focus on the “Overall Health” topic, include only responses from “Excellent” to “Poor”
+#organize responses as a factor taking levels ordered from “Poor” to “Excellent”
+brfss <- brfss_smart2010 |>
+  janitor::clean_names() |> 
+  filter(topic == "Overall Health" | response %in% c("Excellent", "Very good", "Good", "Fair", "Poor")) |> 
+  mutate(response = factor(response, 
+                           levels=c("Poor", "Fair", "Good", "Very good", "Excellent"), ordered=TRUE)) |>
+  rename(resp_id = respid, location_abbr = locationabbr, location_desc = locationdesc)
+head(brfss)
+unique(brfss$topic)
+unique(brfss$response)
+```
+
+Using this dataset, do or answer the following (commenting on the
+results of each):
+
+1.  In 2002, which states were observed at 7 or more locations? What
+    about in 2010?
+
+- In 2002,
+
+2.  Construct a dataset that is limited to Excellent responses, and
+    contains, year, state, and a variable that averages the data_value
+    across locations within a state. Make a “spaghetti” plot of this
+    average value over time within a state (that is, make a plot showing
+    a line for each state across years – the geom_line geometry and
+    group aesthetic will help).
+
+3.  Make a two-panel plot showing, for the years 2006, and 2010,
+    distribution of data_value for responses (“Poor” to “Excellent”)
+    among locations in NY State.
